--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
 BASE=http://localhost:5000
 DATABASE=mongodb://localhost:27017/get_pet
-SECRET=jlhkgdsflahgdlsfkhjlkfff
+SECRET=gdhfbcyfhgrtdyhfgdhjlçljsçfjs
